--- a/frontend/show-do-milhao/src/index.html
+++ b/frontend/show-do-milhao/src/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
   <app-root></app-root>
-  <div class="menu" id="menu"></div>
+  <div class="menu" id="menu" hidden></div>
 </body>
 </html>
